--- a/client/app/scss/package.scss
+++ b/client/app/scss/package.scss
@@ -13,6 +13,7 @@
 @import 'base/glyphs';
 @import 'base/core';
 @import 'base/typography';
+@import 'base/reset';
 
 // Layouts
 @import 'layout/header-banner';
