--- a/client/app/scss/utilities/_config.scss
+++ b/client/app/scss/utilities/_config.scss
@@ -1,11 +1,7 @@
 // _config.scss
 
 /// Sans-serif font stacks
-$font-stack-open-sans: 'Open Sans', Arial, 'Helvetica Neue', Helvetica, sans-serif !default;
-$font-stack-futura: Futura, 'Trebuchet MS', Arial, Helvetica, sans-serif !default;
-$font-stack-garamond: Garamond, Constantia, 'Times New Roman', Times, serif !default;
-$font-stack-consolas: 'Consolas', 'Courier New', 'Bitstream Vera Sans Mono', 'Monaco', monospace !default;
-
+$font-stack-mark: mark, Helvetica, Helvetica, sans-serif !default;
 
 /// Standard colors
 $clear: transparent !default;
