--- a/client/app/scss/base/_core.scss
+++ b/client/app/scss/base/_core.scss
@@ -1,2 +1,15 @@
 // _core.scss
 
+body {
+	font-family: $font-stack-mark;
+	background:#F7F7F7;
+}
+
+.container {
+	@include container(90%);
+}
+
+a {
+	text-decoration:none;
+	color:inherit;
+}
