--- a/client/app/scss/package.scss
+++ b/client/app/scss/package.scss
@@ -25,7 +25,7 @@
 
 // Modules
 @import 'modules/images';
-@import 'modules/buttons';
+@import 'modules/shared';
 
 // Pages
 @import 'pages/home-page';
