Integrate image upload to cloud service

--- a/client/app/admin-dashboard/admin-dashboard.scss
+++ b/client/app/admin-dashboard/admin-dashboard.scss
@@ -90,10 +90,11 @@ svg #search-icon {
 
 .animal-list {
 
-	&-box {
+	&-wrapper {
+		 box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+	}
 
-		height:75px;
-	
+	&-box {	
 		&--items {
 
 			padding:15px 20px;
