--- a/client/app/admin-animal/admin-animal.scss
+++ b/client/app/admin-animal/admin-animal.scss
@@ -2,6 +2,10 @@
 
 	.container {
 		background:white;
+	}
+
+	&-wrapper {
+		box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 		@include display(flex);
 	}
 
@@ -44,6 +48,12 @@
 		font-size: 0.7em;
 		text-transform: uppercase;
 		padding: 15px 0;
+	}
+
+	p {
+		font-size:0.8em;
+		color:#BABABA;
+		padding:10px 0;
 	}
 }
 
