--- a/client/app/scss/modules/_shared.scss
+++ b/client/app/scss/modules/_shared.scss
@@ -5,6 +5,14 @@
     font-size: 0.8em;
     letter-spacing: 0.1em;
     padding: 12px 15px;
+    text-transform:uppercase;
+
+    box-shadow:0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    @include transition(all 0.2s ease-in-out);
+
+    &:hover {
+    	box-shadow:0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+    }
 }
 
 .ac-label {
