--- a/client/app/scss/modules/_shared.scss
+++ b/client/app/scss/modules/_shared.scss
@@ -25,6 +25,10 @@
 
 	&.default {
 		display:block;
-		padding:25px 0;
+		padding:15px;
+        background:#F7F7F7;
+        margin:10px 0;
+        width:100%;
 	}
 }
+
