--- a/client/app/admin-animal/admin-animal.scss
+++ b/client/app/admin-animal/admin-animal.scss
@@ -17,10 +17,10 @@
 
 	&-right {
 		@include span(5 of 12 last);
-		background-image:url('../assets/images/dog_image.jpg');
+
+		@include transition(background-image 0.5s ease-in-out);
 		background-size:cover;
 		background-position:50% 50%;
-
 		overflow:hidden;
 
 		img {
@@ -38,10 +38,11 @@
 .drop-box {
     background: #F8F8F8;
 	border: 1px dashed #DDD;
-	width: auto;
 	height: 70px;
-	text-align: center;
 	padding-top: 25px;
+	margin-bottom:30px;
+	text-align: center;
+	width: auto;
 
 	&--subtitle {
 		color: #9A9A9A;
@@ -49,6 +50,7 @@
 		text-transform: uppercase;
 		padding: 15px 0;
 	}
+
 
 	p {
 		font-size:0.8em;
