--- a/client/app/admin-animal/admin-animal.scss
+++ b/client/app/admin-animal/admin-animal.scss
@@ -12,7 +12,11 @@
 	&-left {
 		@include span(7 of 12);
 		padding:60px;
-		box-sizing: border-box
+		box-sizing: border-box;
+
+		.ac-button {
+			margin:20px 0;
+		}
 	}
 
 	&-right {
@@ -40,7 +44,6 @@
 	border: 1px dashed #DDD;
 	height: 70px;
 	padding-top: 25px;
-	margin-bottom:30px;
 	text-align: center;
 	width: auto;
 
