--- a/client/app/scss/modules/_shared.scss
+++ b/client/app/scss/modules/_shared.scss
@@ -1,4 +1,4 @@
-.ac-button {
+input.ac-button, .ac-button {
     background: #4D5CF9;
     border-radius: 1px;
     color: white;
@@ -12,6 +12,10 @@
 
     &:hover {
     	box-shadow:0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+    }
+
+    &:disabled {
+        opacity:0.3;
     }
 }
 
