Style login view

--- a/client/app/scss/modules/_shared.scss
+++ b/client/app/scss/modules/_shared.scss
@@ -17,6 +17,11 @@ input.ac-button, .ac-button {
     &:disabled {
         opacity:0.3;
     }
+
+    &.login {
+        width:100%;
+        height:auto;
+    }
 }
 
 .ac-label {
