--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -43,6 +43,7 @@ $fa-font-path: "../bower_components/font-awesome/fonts";
 // Component styles are injected through grunt
 /* inject:scss */
 @import 'account/login/login.scss';
+@import 'account/signup/signup.scss';
 @import 'admin-animal/admin-animal.scss';
 @import 'admin-dashboard/admin-dashboard.scss';
 @import 'admin/admin.scss';
