--- a/client/components/navbar-admin/navbar-admin.html
+++ b/client/components/navbar-admin/navbar-admin.html
@@ -4,12 +4,12 @@
             <a href="#" class="logo-link">Animal Collective</a>
         </div>
         <div class="avatar" admin-dashboard>
-            <img src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/128.jpg" alt="" class="avatar-image">
+            <img gravatar-src="'{{navadmin.userEmail}}'" class="avatar-image" gravatar-size="100">
         </div>
         <div class="dropdown">
             <div class="dropdown-caret"></div>
             <ul>
-                <a href="/" class="dropdown-items">
+                <a href="/" target="_blank" class="dropdown-items">
                     <li>View Website</li>
                 </a>
                 <a href="/admin" class="dropdown-items">
