Ability to crop an image

--- a/client/app/account/login/login.scss
+++ b/client/app/account/login/login.scss
@@ -44,6 +44,8 @@
 		padding:20px 0;
 		color: rgba(4, 4, 5, 0.38);
 		font-size:0.9em;
+		text-align:center;
+		
 		&--signup {
 			color: #4D5CF9;
 		}
