--- a/client/app/admin-animal/admin-animal.scss
+++ b/client/app/admin-animal/admin-animal.scss
@@ -77,3 +77,10 @@
 		padding-left: 20px;
 	}
 }
+
+.cropArea {
+    background: #E4E4E4;
+    overflow: hidden;
+    width:100%;
+    height:150px;
+}
