Setup footer for admin panel

--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -48,6 +48,7 @@ $fa-font-path: "../bower_components/font-awesome/fonts";
 @import 'admin-dashboard/admin-dashboard.scss';
 @import 'admin/admin.scss';
 @import 'main/main.scss';
+@import '../components/footer/footer-admin.scss';
 @import '../components/footer/footer.scss';
 @import 'scss/package.scss';
 /* endinject */
