Improve the image cropping tool

--- a/client/app/scss/base/_core.scss
+++ b/client/app/scss/base/_core.scss
@@ -14,20 +14,29 @@ a {
 }
 
 select {
-    background-color: #F7F7F7;
+    border-bottom: 1px solid #e1e1e1;
     width: 100%;
-    padding: 15px;
+    padding: 13px 5px;
     font-size: 0.9em;
+    letter-spacing: 0.07em;
 }
 
 input.ng-untouched {
     background:none;
 }
 
+input.ng-valid-required.ng-valid-parse, 
+input.ng-invalid.ng-valid-parse  {
+    border-top: 0;
+    border-right: 0;
+    border-left: 0;
+}
+
+
 input.ng-valid-required.ng-valid-parse {
-    background: rgba(0, 140, 0, 0.14);
+    border-bottom: 1px solid rgba(0, 140, 0, 1);
 }
 
 input.ng-invalid.ng-valid-parse {
-    background: rgba(255, 0, 0, 0.14);
+    border-bottom: 1px solid rgba(255, 0, 0, 0.14);
 }
