--- a/client/app/admin-dashboard/admin-dashboard.scss
+++ b/client/app/admin-dashboard/admin-dashboard.scss
@@ -1,6 +1,7 @@
 .subhead {
 	
-	padding:50px 0;
+	padding-top:130px;
+	padding-bottom:30px;
 
 	&-title {
 		font-size:2.5em;
@@ -160,7 +161,7 @@ svg #search-icon {
 		}
 
 		&--name {
-			font-size:1.3em;
+			font-size: 1.1em;
 			font-weight:700;
 		}
 
