--- a/client/app/scss/layout/_nav-navigation.scss
+++ b/client/app/scss/layout/_nav-navigation.scss
@@ -1,8 +1,12 @@
 
 .nav {
-    background: white;
+    background: #4D5CF9;
     box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.14), 0px 2px 2px 0px rgba(0, 0, 0, 0.098), 0px 1px 5px 0px rgba(0, 0, 0, 0.084);
-    height: 116px;
+    height: 70px;
+    position:fixed;
+    top:0;
+    width:100%;
+    z-index:100;
 
     > .container {
         height: 100%;
@@ -18,7 +22,8 @@
     display: inline-block;
     &-link {
         text-decoration: none;
-        color: inherit;
+        color: white;
+        letter-spacing:0.1em;
         text-transform: uppercase;
         font-weight: bolder;
         font-size: 1.1em;
