--- a/client/app/admin-dashboard/admin-dashboard.scss
+++ b/client/app/admin-dashboard/admin-dashboard.scss
@@ -107,7 +107,7 @@ svg #search-icon {
 
         	
         	&:nth-child(odd) {
-        		background:#EDEDED;
+        		background: #f8f8f8;
         	}
 
         	&:nth-child(even) {
