--- a/client/components/navbar-admin/navbar-admin.html
+++ b/client/components/navbar-admin/navbar-admin.html
@@ -4,7 +4,7 @@
             <a href="#" class="logo-link">Animal Collective</a>
         </div>
         <div class="avatar" admin-dashboard>
-            <img gravatar-src="'{{navadmin.userEmail}}'" class="avatar-image" gravatar-size="100">
+            <img gravatar-src="'{{navadmin.user.email}}'" class="avatar-image" gravatar-size="100">
         </div>
         <div class="dropdown">
             <div class="dropdown-caret"></div>
