--- a/client/app/scss/pages/_main.scss
+++ b/client/app/scss/pages/_main.scss
@@ -1,3 +1,6 @@
+////= Main Composition Styling
+//======================================================================//
+
 .homepage {
   @include display(flex);
   @include align-items(center);
