--- a/client/app/scss/pages/_signup.scss
+++ b/client/app/scss/pages/_signup.scss
@@ -1,3 +1,6 @@
+////= Sign Up Composition Styling
+//======================================================================//
+
 .signup {
 
 	&-help-block {
