--- a/client/app/scss/pages/_admin-dashboard.scss
+++ b/client/app/scss/pages/_admin-dashboard.scss
@@ -1,3 +1,6 @@
+////= Admin Dashboard Composition Styling
+//======================================================================//
+
 .subhead {
 	
 	padding-top:130px;
@@ -18,8 +21,8 @@
 			margin-right:20px;
 
 			&.active {
-				border-bottom: 1px solid blue;
-				color:blue;
+				border-bottom: 1px solid $primary-color;
+				color:$primary-color;
 			}
 		}
 	}
@@ -66,7 +69,7 @@ svg #three-dots {
 }
 
 svg #edit-icon {
-	fill:blue;
+	fill:$primary-color;
 }
 
 svg #delete-icon {
