--- a/client/app/scss/pages/_admin.scss
+++ b/client/app/scss/pages/_admin.scss
@@ -1,3 +1,6 @@
+////= Admin Composition Styling
+//======================================================================//
+
 .trash { color:rgb(209, 91, 71); }
 
 .user-list {
