--- a/client/components/navbar-admin/navbar-admin.html
+++ b/client/components/navbar-admin/navbar-admin.html
@@ -24,10 +24,10 @@
 </nav>
 <section class="subhead">
     <div class="container">
-        <h1 class="subhead-title">{{navadmin.title}}</h1>
+        <h1 class="subhead-title">{{title}}</h1>
         <div class="subhead-menu">
             <a href="/admin-dashboard" ng-class="{ active: navadmin.isActive('/admin-dashboard')}">Animals</a>
-            <a href="#" ng-class="{active: navadmin.isActive('/admin-interviews')}">Interviews</a>
+            <a href="/admin-interviews" ng-class="{active: navadmin.isActive('/admin-interviews')}">Interviews</a>
         </div>
     </div>
 </section>  
