--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -1,43 +1,21 @@
-$fa-font-path: "../bower_components/font-awesome/fonts";
-@import '../bower_components/font-awesome/scss/font-awesome';
 @import '../bower_components/susy/sass/susy';
 @import '../bower_components/bourbon/app/assets/stylesheets/bourbon';
 
-
-/**
- * App-wide Styles
- */
-
-// $susy: (
-//   global-box-sizing: content-box,
-//   debug: (
-//     image: hide,
-//     color: rgba(#66f, .25),
-//     output: background,
-//     toggle: top right,
-//   ),
-//   use-custom: (
-//     background-image: true,
-//     background-options: false,
-//     box-sizing: true,
-//     clearfix: false,
-//     rem: true,
-//   )
-// );
-
+$susy: (
+    container: 80%,
+    columns: 4, // default Susy setting
+    gutters: 0.25,
+    global-box-sizing: border-box,
+    use-custom: (
+        clearfix: true // use my clearfix mixin
+    )
+);
 
 .browserupgrade {
   margin: 0.2em 0;
   background: #ccc;
   color: #000;
   padding: 0.2em 0;
-}
-
-/* Responsive: Portrait tablets and up */
-@media screen and (min-width: 768px) {
-  .container {
-    max-width: 730px;
-  }
 }
 
 // Component styles are injected through grunt
