--- a/client/app/scss/utilities/_mixins.scss
+++ b/client/app/scss/utilities/_mixins.scss
@@ -1,5 +1,17 @@
 // _mixins.scss
 
+@mixin clearfix {
+    &::before,
+    &::after {
+        display: table;
+        content: "";
+        line-height: 0;
+    }
+    &::after {
+        clear: both;
+    }
+}
+
 @mixin el($element) {
   &__#{$element} {
     @content;
@@ -30,14 +42,24 @@
   }
 }
 
-@mixin respond-to($key) {
-  $value: map-get($breakpoints, $key);
-
-  @if not $value {
-    @error 'No value found for `#{$key}`. Please make sure it is defined in `$breakpoints` map.';
+@mixin breakpoint($class) {
+  @if $class == xs {
+    @media (max-width: 767px) { @content; }
   }
-
-  @media #{if(type-of($value) == 'string', unquote($value), inspect($value))} {
-    @content;
+ 
+  @else if $class == sm {
+    @media (max-width: 768px) { @content; }
+  }
+ 
+  @else if $class == md {
+    @media (max-width: 992px) { @content; }
+  }
+ 
+  @else if $class == lg {
+    @media (max-width: 1200px) { @content; }
+  }
+ 
+  @else {
+    @warn "Breakpoint mixin supports: xs, sm, md, lg";
   }
 }
