--- a/client/app/scss/layout/_nav-navigation.scss
+++ b/client/app/scss/layout/_nav-navigation.scss
@@ -125,6 +125,10 @@ header.main {
 
     .logo {
         display: inline-block;
+        font-size: 1.3em;
+        color:#F65151;
+        text-transform:uppercase;
+
         img {
             width:180px;
         }
@@ -135,8 +139,11 @@ header.main {
         padding: 10px 0;
         li {
             display: inline-block;
-            color:#AA889F;
+            color:black;
             padding-left:30px;
+            text-transform:uppercase;
+            font-size: 0.9em;
+            font-weight:bolder;
         }
     }
 }
