--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -2,9 +2,10 @@
     <div class="container">
         <nav>
             <div class="logo">
-                <a href="index.html"><img src="assets/images/logo.svg" alt=""></a>
+                <a href="index.html">Animal Collective</a>
             </div>
             <ul>
+                <li><a href="#">Animals</a></li>
                 <li><a href="#">Interviews</a></li>
                 <li><a href="#">About</a></li>
             </ul>
