--- a/client/app/scss/base/_core.scss
+++ b/client/app/scss/base/_core.scss
@@ -5,6 +5,12 @@ body {
     background: #F7F7F7;
 }
 
+* {
+    -webkit-font-smoothing: antialiased;
+    font-smoothing: antialiased;
+    text-rendering: optimizeLegibility;
+}
+
 .container {
     @include container();
 }
