--- a/client/app/scss/pages/_main.scss
+++ b/client/app/scss/pages/_main.scss
@@ -1,5 +1,6 @@
 // ////= Main Composition Styling
 // //======================================================================//
+// 
 section.main {
     .container {
         .gallery_home {
@@ -11,10 +12,10 @@ section.main {
             }
             &--items {
                 height: auto;
-                border-radius: 3px;
                 background: white;
-                box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
                 margin-bottom: gutter(susy-get(columns));
+                position: relative;
+                height: 277px;
                 @include gallery(1 of 5);
                 @include breakpoint(md) {
                     @include gallery(4 of 12);
@@ -24,11 +25,116 @@ section.main {
                     float: none;
                 }
 
+                &:hover {
+                    > div:first-child {
+
+                        opacity: 1;
+                        @include transition(opacity 0.1s ease-in);
+
+                        p {
+                            &:first-of-type {
+                                -webkit-animation: 0.35s cubic-bezier(0.2, 0.3, 0.25, 0.9) 1.2s normal forwards 1 titleUp;
+                                animation: 0.35s cubic-bezier(0.2, 0.3, 0.25, 0.9) 1.2s normal forwards 1 titleUp;
+                                -webkit-animation-delay: 0.2s;
+                                animation-delay: 0.2s; 
+                            }
+                            &:last-of-type {
+                                -webkit-animation: 0.35s cubic-bezier(0.2, 0.3, 0.25, 0.9) 1.2s normal forwards 1 titleDown;
+                                animation: 0.35s cubic-bezier(0.2, 0.3, 0.25, 0.9) 1.2s normal forwards 1 titleDown;
+                                -webkit-animation-delay: 0.2s;
+                                animation-delay: 0.2s; 
+                            }
+                        }
+                    }
+                }
+
+                &---overlay,
                 &---hero {
-					height:277px;
-					background:black;
+                    position: absolute;
+                    width: 100%;
+                    height: 100%;
+                }
+
+                &---overlay {
+                    z-index: 2;
+                    background: rgba(246, 81, 81, 0.73);
+                    cursor: pointer;
+                    opacity: 0;
+
+                    @include transition(opacity 0.5s ease-in-out);
+                    @include display(flex);
+                    @include align-items(center);
+                    @include justify-content(center);
+                    @include flex-direction(row);
+
+                    p {
+                        display: block;
+                        text-align: center;
+                        padding: 3px 0;
+                        color: white;
+                        &:first-of-type {
+                            font-size: 1.5em;
+                            font-weight: bolder;
+                            opacity: 0;
+                        }
+                        &:last-of-type {
+                            opacity: 0;
+                        }
+
+                    }
+                }
+                &---hero {
+                    background: black;
+                    background-size: cover;
+                    background-position: 50% 50%;
+                    border-radius: 2px;
+                    filter: grayscale(40%);
                 }
             }
         }
+    }
+}
+
+@-webkit-keyframes titleUp {
+    0% {
+        opacity: 0;
+        -webkit-transform: translateY(-10px);
+        transform: translateY(-10px);
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+@keyframes titleUp {
+    0% {
+        opacity: 0;
+        -webkit-transform: translateY(-10px);
+        transform: translateY(-10px);
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+@-webkit-keyframes titleDown {
+    0% {
+        opacity: 0;
+        -webkit-transform: translateY(10px);
+        transform: translateY(10px);
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+@keyframes titleDown {
+    0% {
+        opacity: 0;
+        -webkit-transform: translateY(10px);
+        transform: translateY(10px);
+    }
+    100% {
+        opacity: 1;
     }
 }
