Use bourbon mixin to generate clean vendor-prefixed keyframes

--- a/client/app/scss/package.scss
+++ b/client/app/scss/package.scss
@@ -5,6 +5,7 @@
 @import 'utilities/config';
 @import 'utilities/functions';
 @import 'utilities/mixins';
+@import 'utilities/keyframes';
 
 // Extends
 @import 'extends/animations';
