--- a/client/app/scss/pages/_main.scss
+++ b/client/app/scss/pages/_main.scss
@@ -3,6 +3,17 @@
 // 
 section.main {
     .container {
+
+        .main_title {
+            color:#313131;
+            font-weight:lighter;
+            font-size:1.1em;
+            line-height:1.6em;
+            padding: 20px 0;
+            text-align: center;
+            text-transform: uppercase;
+        }
+
         .gallery_home {
             @include full;
             ul {
@@ -16,6 +27,7 @@ section.main {
                 margin-bottom: gutter(susy-get(columns));
                 position: relative;
                 height: 277px;
+
                 @include gallery(1 of 5);
                 @include breakpoint(md) {
                     @include gallery(4 of 12);
@@ -33,16 +45,12 @@ section.main {
 
                         p {
                             &:first-of-type {
-                                -webkit-animation: 0.35s cubic-bezier(0.2, 0.3, 0.25, 0.9) 1.2s normal forwards 1 titleUp;
-                                animation: 0.35s cubic-bezier(0.2, 0.3, 0.25, 0.9) 1.2s normal forwards 1 titleUp;
-                                -webkit-animation-delay: 0.2s;
-                                animation-delay: 0.2s; 
+                                @include animation(cubic-bezier(0.2, 0.3, 0.25, 0.9) 1.2s normal forwards 1 titleUp);
+                                @include animation-delay(0.2s)
                             }
                             &:last-of-type {
-                                -webkit-animation: 0.35s cubic-bezier(0.2, 0.3, 0.25, 0.9) 1.2s normal forwards 1 titleDown;
-                                animation: 0.35s cubic-bezier(0.2, 0.3, 0.25, 0.9) 1.2s normal forwards 1 titleDown;
-                                -webkit-animation-delay: 0.2s;
-                                animation-delay: 0.2s; 
+                                @include animation(cubic-bezier(0.2, 0.3, 0.25, 0.9) 1.2s normal forwards 1 titleDown);
+                                @include animation-delay(0.2s)
                             }
                         }
                     }
@@ -87,54 +95,10 @@ section.main {
                     background: black;
                     background-size: cover;
                     background-position: 50% 50%;
-                    border-radius: 2px;
+                    border-radius: 3px;
                     filter: grayscale(40%);
                 }
             }
         }
-    }
-}
-
-@-webkit-keyframes titleUp {
-    0% {
-        opacity: 0;
-        -webkit-transform: translateY(-10px);
-        transform: translateY(-10px);
-    }
-    100% {
-        opacity: 1;
-    }
-}
-
-@keyframes titleUp {
-    0% {
-        opacity: 0;
-        -webkit-transform: translateY(-10px);
-        transform: translateY(-10px);
-    }
-    100% {
-        opacity: 1;
-    }
-}
-
-@-webkit-keyframes titleDown {
-    0% {
-        opacity: 0;
-        -webkit-transform: translateY(10px);
-        transform: translateY(10px);
-    }
-    100% {
-        opacity: 1;
-    }
-}
-
-@keyframes titleDown {
-    0% {
-        opacity: 0;
-        -webkit-transform: translateY(10px);
-        transform: translateY(10px);
-    }
-    100% {
-        opacity: 1;
     }
 }
