--- a/client/app/scss/layout/_nav-navigation.scss
+++ b/client/app/scss/layout/_nav-navigation.scss
@@ -1,7 +1,7 @@
 // ADMIN
 
 .nav {
-    background: #4D5CF9;
+    background: $navbar-admin-color;
     box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.14), 0px 2px 2px 0px rgba(0, 0, 0, 0.098), 0px 1px 5px 0px rgba(0, 0, 0, 0.084);
     height: 70px;
     position:fixed;
@@ -126,7 +126,7 @@ header.main {
     .logo {
         display: inline-block;
         font-size: 1.3em;
-        color:#F65151;
+        color:white;
         text-transform:uppercase;
 
         img {
@@ -139,7 +139,7 @@ header.main {
         padding: 10px 0;
         li {
             display: inline-block;
-            color:black;
+            color:white;
             padding-left:30px;
             text-transform:uppercase;
             font-size: 0.9em;
