--- a/client/app/scss/pages/_admin-dashboard.scss
+++ b/client/app/scss/pages/_admin-dashboard.scss
@@ -7,6 +7,7 @@
 	padding-bottom:30px;
 
 	&-title {
+		color:white;
 		font-size:2.5em;
 		font-weight:400;
 		padding-bottom: 10px;
@@ -16,13 +17,14 @@
 		border-bottom:1px solid #E9E9E9;
 		padding: 20px 0;
 		> a {
+			color:white;
 			font-size:1.1em;
 			padding-bottom: 18px;
 			margin-right:20px;
 
 			&.active {
-				border-bottom: 1px solid $primary-color;
-				color:$primary-color;
+				border-bottom: 1px solid $secondary-color;
+				color:$secondary-color;
 			}
 		}
 	}
