--- a/client/app/scss/pages/_main.scss
+++ b/client/app/scss/pages/_main.scss
@@ -3,17 +3,16 @@
 // 
 section.main {
     .container {
-
         .main_title {
-            color:#313131;
-            font-weight:lighter;
-            font-size:1.1em;
-            line-height:1.6em;
+            color: #a8a1e1;
+            font-weight: lighter;
+            font-size: 1em;
+            letter-spacing: 0.02em;
+            line-height: 1.6em;
             padding: 20px 0;
             text-align: center;
             text-transform: uppercase;
         }
-
         .gallery_home {
             @include full;
             ul {
@@ -27,7 +26,6 @@ section.main {
                 margin-bottom: gutter(susy-get(columns));
                 position: relative;
                 height: 277px;
-
                 @include gallery(1 of 5);
                 @include breakpoint(md) {
                     @include gallery(4 of 12);
@@ -36,49 +34,42 @@ section.main {
                     @include gallery(12 of 12);
                     float: none;
                 }
-
                 &:hover {
                     > div:first-child {
-
                         opacity: 1;
                         @include transition(opacity 0.1s ease-in);
-
                         p {
                             &:first-of-type {
-                                @include animation(cubic-bezier(0.2, 0.3, 0.25, 0.9) 1.2s normal forwards 1 titleUp);
-                                @include animation-delay(0.2s)
+                                @include animation(cubic-bezier(0.2, 0.3, 0.25, 0.9) 0.7s normal forwards 1 titleUp);
+                                @include animation-delay(0.1s)
                             }
                             &:last-of-type {
-                                @include animation(cubic-bezier(0.2, 0.3, 0.25, 0.9) 1.2s normal forwards 1 titleDown);
-                                @include animation-delay(0.2s)
+                                @include animation(cubic-bezier(0.2, 0.3, 0.25, 0.9) 0.7s normal forwards 1 titleDown);
+                                @include animation-delay(0.1s)
                             }
                         }
                     }
                 }
-
                 &---overlay,
                 &---hero {
                     position: absolute;
                     width: 100%;
                     height: 100%;
                 }
-
                 &---overlay {
                     z-index: 2;
                     background: rgba(246, 81, 81, 0.73);
                     cursor: pointer;
                     opacity: 0;
-
-                    @include transition(opacity 0.5s ease-in-out);
+                    @include transition(opacity 0.2s ease-in-out);
                     @include display(flex);
                     @include align-items(center);
                     @include justify-content(center);
                     @include flex-direction(row);
-
                     p {
                         display: block;
                         text-align: center;
-                        padding: 3px 0;
+                        padding: 3px 5px;
                         color: white;
                         &:first-of-type {
                             font-size: 1.5em;
@@ -88,14 +79,13 @@ section.main {
                         &:last-of-type {
                             opacity: 0;
                         }
-
                     }
                 }
                 &---hero {
                     background: black;
                     background-size: cover;
                     background-position: 50% 50%;
-                    border-radius: 3px;
+                    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
                     filter: grayscale(40%);
                 }
             }
