--- a/client/app/scss/pages/_main.scss
+++ b/client/app/scss/pages/_main.scss
@@ -12,7 +12,7 @@ section.main {
             text-align: center;
             text-transform: uppercase;
         }
-        .grid {
+        .main_grid {
             li {
                 &:nth-child(2) {
                     height: 500px;
@@ -25,7 +25,7 @@ section.main {
                 }
             }
         }
-        .grid-item {
+        .main_grid-item {
             height: 300px;
             width: 20%;
             border: 15px solid transparent;
@@ -57,13 +57,13 @@ section.main {
             }
         }
         
-        .grid-info,
-        .grid-hero {
+        .main_grid-info,
+        .main_grid-hero {
             position: absolute;
             width: 100%;
             height: 100%;
         }
-        .grid-info {
+        .main_grid-info {
             z-index: 2;
             background: rgba(246, 81, 81, 0.73);
             cursor: pointer;
@@ -88,7 +88,7 @@ section.main {
                 }
             }
         }
-        .grid-hero {
+        .main_grid-hero {
             background: black;
             background-size: cover;
             background-position: 50% 50%;
